# gist-sync-python

./: .gitignore  .travis.yml  Pipfile  README.md  __pypit_desc__.rst  __pypit_metadata__.json  pyproject.toml  requirements.txt  setup.py
gistsync/: __main__.py  cmd.py  consts.py  data.py  entry_points_console_scripts.py  gist_dir.py  gist_ops.py  global_settings.py  main.py  utils.py
tests/: test_utils.py
