[tool.poetry]
name = "gistsync"
version = "0.1.0"
description = "Just sync gists with cli!"
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
fsoopify = "^0.5.1"
PyGithub = "^1.53"
click-anno = "^0.1.1"
colorama = "^0.4.4"
anyioc = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
setupmeta-builder = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
